--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 //insert your Atlas_URI including users username and password
-ATLAS_URI=mongodb+srv://Tee:thisnthat@cluster0-xvq10.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI={ insert api here}
